Fix wrapped flyout menu item styling
git-svn-id: https://plugins.svn.wordpress.org/megamenu/trunk@958220 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/megamenu.scss
+++ b/css/megamenu.scss
@@ -326,7 +326,6 @@
 				    font-weight: $flyout_link_weight;
 				    padding: $flyout_link_padding_top $flyout_link_padding_right $flyout_link_padding_bottom $flyout_link_padding_left;
 				    line-height: $flyout_link_height;
-				    height: $flyout_link_height;
 				    vertical-align: baseline;
 			    }
 
